[package]
name = "evm-rs"
version = "0.1.7"
authors = ["Agustin Chiappe Berrini <jnieve@gmail.com>"]

[dependencies]
chrono = { version = "0.4.9", features = ["serde"] }
devp2p-secp256k1 = "0.5.6"
etcommon-bigint = "0.2.10"
etcommon-trie = "0.4.0"
etcommon-block = "0.5.1"
etcommon-rlp = "0.2.4"
ethereum-types = "0.8.0"
env_logger = "0.7.0"
failure = "0.1.6"
hmac = "0.7.1"
libvm = { git = "https://github.com/Fantom-foundation/libvm", version = "~0.1.5" }
log = "0.4.8"
openssl = "0.10.25"
pbkdf2 = "0.3.0"
tiny-keccak = "1.5.0"
rand = "0.7.2"
rpassword = "4.0.1"
rustc-serialize = "0.3.24"
serde = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"
sha2 = "0.8.0"
sha3 = "0.8.2"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
