[package]
name = "world"
version = "0.1.0"
authors = ["Agustin Chiappe Berrini <jnieve@gmail.com>"]

[dependencies]
fvm = { path = "../fvm" }
etcommon-trie = "0.4.0"
etcommon-bigint = "0.2.10"
etcommon-bloom = "0.2.1"
etcommon-rlp = "0.2.4"
etcommon-block = "0.5.1"
ethereum-types = "0.8.0"
futures-util-preview = "0.3.0-alpha.19"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
tempdir = "0.3.7"
rkv = "0.10.2"
serde = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"
sha3 = "0.8.2"
byteorder = "1.3.2"
devp2p-secp256k1 = "0.5.6"
libconsensus = { git = "https://github.com/Fantom-foundation/libconsensus" }
